# ProctorAI

./: .gitignore  CLAUDE.md  README.md  benchmark_models.py  com.proctorai.plist  edit-proctor-memory.sh  launch.sh  log_viewer.py  pyproject.toml  run.sh
src/: config_prompts.yaml  main.py  notion_tasks.py  procrastination_event.py  user_interface.py  utils.py
tests/: conftest.py  test_api_calls.py  test_cycle.py
