[project]
name = "proctorai"
version = "0.1.0"
description = "macOS multimodal AI productivity tool"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.30",
    "PyQt5>=5.15",
    "requests>=2.31",
    "pydub>=0.25",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "PyYAML>=6.0",
    "pyobjc-framework-Cocoa>=10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
