[project]
name = "proctorai"
version = "0.1.0"
description = "macOS multimodal AI productivity tool"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.30,<3",
    "PyQt5>=5.15,<6",
    "requests>=2.31,<3",
    "pydub>=0.25,<1",
    "sounddevice>=0.4,<1",
    "soundfile>=0.12,<1",
    "PyYAML>=6.0,<7",
    "pyobjc-framework-Cocoa>=10.0,<12",
    "audioop-lts>=0.2.2,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
